# just-image-desu

./: Cargo.toml
assets/static/: bruh.html  home.html  not_found.html
assets/static/css/: style.css
src/: main.rs
