[package]
name = "just-image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
derive_more = "0.99.17"
env_logger = "0.9.1"
log = "0.4.17"
parking_lot = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

